--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.copart.example</groupId>
+	<groupId>com.kaushal.sample</groupId>
 	<artifactId>ExampleProject</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -37,21 +37,6 @@
 				<name>Maven Release Repository</name>
 				<url>http://repo1.maven.org/maven2</url>
 			</repository>
-			<repository>
-				<id>CopartRelease</id>
-				<name>Copart Local Release Repository</name>
-				<url>http://nexus.copart.com/content/repositories</url>
-			</repository>
-			<repository>
-				<id>CopartReleases</id>
-				<name>Copart Local Release Repository</name>
-				<url>http://nexus.copart.com/content/repositories/releases</url>
-			</repository>
-			<repository>
-				<id>CopartSnapshots</id>
-				<name>Copart Local Release Repository</name>
-				<url>http://nexus.copart.com/content/repositories/snapshots</url>
-			</repository>
 		</repositories>
     <!--End Repositories-->
 	
@@ -74,7 +59,7 @@
 		<thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
         <solr.version>5.5.0</solr.version>
 		 <frontend-plugin.version>0.0.27</frontend-plugin.version>
-		 <node.version>v5.7.0</node.version>
+		 <node.version>v6.9.5</node.version>
 		 <npm.version>3.10.6</npm.version>
     </properties>
 	
